<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockR</string>
    <string name="greeting">Don\'t know anyone to jam with?

        RockR is a simple app that quickly matches you with local musicians who are also looking to play.
        Only 3 minutes to start matchmaking!</string>
    <string name="registerText">New to RockR?\nGet Started Now!</string>
    <string name="loginText">Log in here</string>
    <string name="welcome">Welcome Back</string>
    <string name="hint_username">Username or email</string>
    <string name="hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
