<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="rockr.elliottewing.com.rockr.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100px" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:id="@+id/user_input"
            android:background="@color/light_grey"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_username" />

        <Space
            android:layout_height="20px"
            android:layout_width="fill_parent" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass_input"
            android:background="@color/light_grey"
            android:hint="@string/hint_password" />

        <Space
            android:layout_height="20px"
            android:layout_width="fill_parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button_login"
            android:background="@drawable/rockr_button"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_height="20px"
            android:layout_width="fill_parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/button_back"
            android:background="@drawable/rockr_button"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</FrameLayout>
