<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="rockr.elliottewing.com.rockr.PreLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/login_fragment"
        tools:context="rockr.elliottewing.com.rockr.SecondaryActivity$PlaceholderFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textSize="75sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_grey"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/greeting"
                android:textColor="@color/light_grey"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerText"
                android:id="@+id/buttonSignUp"
                android:textColor="@color/light_grey"
                android:background="@drawable/rockr_button"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginText"
                android:id="@+id/buttonLogIn"
                android:textColor="@color/light_grey"
                android:background="@drawable/rockr_button"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
